--- a/GList/Base.lproj/Main.storyboard
+++ b/GList/Base.lproj/Main.storyboard
@@ -29,13 +29,13 @@
                                         <rect key="frame" x="8" y="16" width="359" height="36"/>
                                         <subviews>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Total Cart:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ewh-RG-eY4">
-                                                <rect key="frame" x="0.0" y="0.0" width="266" height="36"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="240" height="36"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
-                                                <color key="textColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                                <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$$$$$" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whk-lH-jZo">
-                                                <rect key="frame" x="266" y="0.0" width="93" height="36"/>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$000.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whk-lH-jZo">
+                                                <rect key="frame" x="240" y="0.0" width="119" height="36"/>
                                                 <fontDescription key="fontDescription" type="system" pointSize="30"/>
                                                 <color key="textColor" red="0.0" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                                 <nil key="highlightedColor"/>
@@ -43,17 +43,17 @@
                                         </subviews>
                                     </stackView>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Yd1-D8-Qt2">
-                                        <rect key="frame" x="125" y="107" width="125" height="42"/>
+                                        <rect key="frame" x="125" y="101" width="125" height="42"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="25"/>
-                                        <state key="normal" title="Add ">
-                                            <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                        <state key="normal" title="Add to list">
+                                            <color key="titleColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                                         </state>
                                         <connections>
                                             <action selector="addButton:" destination="gFy-cY-xl3" eventType="touchUpInside" id="UMP-Ka-Khg"/>
                                         </connections>
                                     </button>
                                     <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DeQ-ul-Sqo">
-                                        <rect key="frame" x="0.0" y="162" width="375" height="485"/>
+                                        <rect key="frame" x="0.0" y="176" width="375" height="471"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="nU5-0q-wVs">
@@ -76,22 +76,30 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="D0k-zr-IvY">
+                                        <rect key="frame" x="0.0" y="142" width="375" height="2"/>
+                                        <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="1" colorSpace="calibratedRGB"/>
+                                    </view>
                                 </subviews>
-                                <color key="backgroundColor" red="0.5" green="0.0" blue="0.5" alpha="0.68314807046979864" colorSpace="calibratedRGB"/>
+                                <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
+                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="top" secondItem="D0k-zr-IvY" secondAttribute="bottom" constant="32" id="08W-H9-zLh"/>
                                     <constraint firstItem="DDl-Un-PGo" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leadingMargin" id="7cb-cw-x4c"/>
                                     <constraint firstItem="rxR-FS-SUD" firstAttribute="top" secondItem="DDl-Un-PGo" secondAttribute="bottom" constant="10" id="AFV-tz-9Xs"/>
                                     <constraint firstItem="DeQ-ul-Sqo" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leading" id="Gap-cx-WK6"/>
                                     <constraint firstAttribute="trailing" secondItem="Yd1-D8-Qt2" secondAttribute="trailing" constant="125" id="Nr9-l1-3Hf"/>
+                                    <constraint firstItem="D0k-zr-IvY" firstAttribute="top" secondItem="rxR-FS-SUD" secondAttribute="bottom" constant="50" id="P2p-j4-ecA"/>
                                     <constraint firstItem="Yd1-D8-Qt2" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leading" constant="125" id="QOx-si-aAv"/>
                                     <constraint firstItem="DDl-Un-PGo" firstAttribute="top" secondItem="s02-jg-TFw" secondAttribute="topMargin" constant="8" id="Rcr-q4-v1c"/>
+                                    <constraint firstItem="D0k-zr-IvY" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leading" id="UFo-nt-QJn"/>
+                                    <constraint firstAttribute="trailing" secondItem="D0k-zr-IvY" secondAttribute="trailing" id="Uli-gQ-FYO"/>
                                     <constraint firstItem="rxR-FS-SUD" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leadingMargin" id="Ytr-th-Hch"/>
                                     <constraint firstAttribute="trailingMargin" secondItem="DDl-Un-PGo" secondAttribute="trailing" id="jJJ-3e-5oK"/>
                                     <constraint firstItem="rxR-FS-SUD" firstAttribute="trailing" secondItem="s02-jg-TFw" secondAttribute="trailingMargin" id="kQc-Ai-NnL"/>
-                                    <constraint firstItem="Yd1-D8-Qt2" firstAttribute="top" secondItem="rxR-FS-SUD" secondAttribute="bottom" constant="15" id="pOV-Ii-sjC"/>
+                                    <constraint firstItem="Yd1-D8-Qt2" firstAttribute="top" secondItem="rxR-FS-SUD" secondAttribute="bottom" constant="9" id="pOV-Ii-sjC"/>
                                     <constraint firstAttribute="trailing" secondItem="DeQ-ul-Sqo" secondAttribute="trailing" id="r43-FO-rJN"/>
                                     <constraint firstAttribute="bottom" secondItem="DeQ-ul-Sqo" secondAttribute="bottom" id="tYz-pS-8DO"/>
-                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="top" secondItem="rxR-FS-SUD" secondAttribute="bottom" constant="70" id="wnS-sB-TXD"/>
+                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="top" secondItem="rxR-FS-SUD" secondAttribute="bottom" constant="84" id="wnS-sB-TXD"/>
                                 </constraints>
                             </view>
                         </subviews>
