--- a/GList/Base.lproj/Main.storyboard
+++ b/GList/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C53a" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="kQ5-Jj-1Wj">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11542" systemVersion="16C60b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="kQ5-Jj-1Wj">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -25,21 +25,15 @@
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="s02-jg-TFw">
                                 <rect key="frame" x="0.0" y="64" width="375" height="603"/>
                                 <subviews>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="$0.00" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whk-lH-jZo">
-                                        <rect key="frame" x="266" y="8" width="93" height="43"/>
-                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="36"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DeQ-ul-Sqo">
-                                        <rect key="frame" x="0.0" y="113" width="375" height="490"/>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" directionalLockEnabled="YES" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="DeQ-ul-Sqo">
+                                        <rect key="frame" x="0.0" y="96" width="375" height="507"/>
                                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                         <prototypes>
                                             <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="cell" id="nU5-0q-wVs">
-                                                <rect key="frame" x="0.0" y="28" width="375" height="44"/>
+                                                <rect key="frame" x="0.0" y="10" width="375" height="44"/>
                                                 <autoresizingMask key="autoresizingMask"/>
                                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="nU5-0q-wVs" id="X5v-Yl-ASh">
-                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43.5"/>
+                                                    <rect key="frame" x="0.0" y="0.0" width="375" height="43"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                 </tableViewCellContentView>
                                             </tableViewCell>
@@ -60,43 +54,44 @@
                                             <action selector="addButton:" destination="gFy-cY-xl3" eventType="touchUpInside" id="UMP-Ka-Khg"/>
                                         </connections>
                                     </button>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Total Cart:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="ewh-RG-eY4">
-                                        <rect key="frame" x="16" y="8" width="151" height="43"/>
-                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="36"/>
-                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
-                                        <nil key="highlightedColor"/>
-                                    </label>
-                                    <tabBar contentMode="scaleToFill" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="XND-Bh-lHp">
+                                    <tabBar contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="XND-Bh-lHp">
                                         <rect key="frame" x="0.0" y="554" width="375" height="49"/>
-                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                         <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                         <items>
-                                            <tabBarItem title="Save" id="I34-Bz-ikh"/>
-                                            <tabBarItem title="Shop" id="iFk-dU-NC9"/>
+                                            <tabBarItem title="Save List" id="I34-Bz-ikh"/>
+                                            <tabBarItem title="Go Shopping" id="iFk-dU-NC9"/>
                                         </items>
                                     </tabBar>
-                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rxR-FS-SUD">
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" horizontalHuggingPriority="249" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Enter item then add" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="rxR-FS-SUD">
                                         <rect key="frame" x="16" y="61" width="272" height="30"/>
-                                        <nil key="textColor"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Today's Date" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Whk-lH-jZo">
+                                        <rect key="frame" x="8" y="8" width="359" height="39"/>
+                                        <fontDescription key="fontDescription" type="system" weight="thin" pointSize="32"/>
+                                        <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.5" colorSpace="calibratedRGB"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
                                 </subviews>
                                 <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstItem="Yd1-D8-Qt2" firstAttribute="top" secondItem="Whk-lH-jZo" secondAttribute="bottom" constant="5" id="0sb-To-gvS"/>
-                                    <constraint firstItem="Whk-lH-jZo" firstAttribute="trailing" secondItem="Yd1-D8-Qt2" secondAttribute="trailing" id="8dp-Dj-t1C"/>
-                                    <constraint firstItem="ewh-RG-eY4" firstAttribute="top" secondItem="s02-jg-TFw" secondAttribute="topMargin" id="FGF-hc-Wx6"/>
-                                    <constraint firstItem="Whk-lH-jZo" firstAttribute="top" secondItem="s02-jg-TFw" secondAttribute="topMargin" id="JOw-I4-sWS"/>
-                                    <constraint firstAttribute="trailingMargin" secondItem="Whk-lH-jZo" secondAttribute="trailing" constant="8" id="JdS-us-BAV"/>
+                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="leading" secondItem="XND-Bh-lHp" secondAttribute="leading" id="Bjf-uP-5HR"/>
                                     <constraint firstItem="rxR-FS-SUD" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leadingMargin" constant="8" id="Lwa-kJ-c0U"/>
-                                    <constraint firstItem="rxR-FS-SUD" firstAttribute="top" secondItem="ewh-RG-eY4" secondAttribute="bottom" constant="10" id="P8x-V4-DQP"/>
+                                    <constraint firstItem="rxR-FS-SUD" firstAttribute="centerY" secondItem="Yd1-D8-Qt2" secondAttribute="centerY" id="QU8-mb-0PZ"/>
+                                    <constraint firstAttribute="trailingMargin" secondItem="Whk-lH-jZo" secondAttribute="trailing" id="fX7-LI-Eb0"/>
+                                    <constraint firstAttribute="trailing" secondItem="Yd1-D8-Qt2" secondAttribute="trailing" constant="16" id="ina-kA-jNj"/>
                                     <constraint firstAttribute="bottom" secondItem="DeQ-ul-Sqo" secondAttribute="bottom" id="j4m-Ka-zq5"/>
+                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="trailing" secondItem="XND-Bh-lHp" secondAttribute="trailing" id="llh-Wd-B4K"/>
                                     <constraint firstItem="DeQ-ul-Sqo" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leading" id="ndF-MM-pnY"/>
-                                    <constraint firstItem="ewh-RG-eY4" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leadingMargin" constant="8" id="oxr-tq-fSd"/>
+                                    <constraint firstItem="Whk-lH-jZo" firstAttribute="leading" secondItem="s02-jg-TFw" secondAttribute="leadingMargin" id="pHL-Nz-vRQ"/>
+                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="bottom" secondItem="XND-Bh-lHp" secondAttribute="bottom" id="qEZ-Me-KRR"/>
+                                    <constraint firstItem="Whk-lH-jZo" firstAttribute="top" secondItem="s02-jg-TFw" secondAttribute="topMargin" id="qhk-0j-ewW"/>
                                     <constraint firstAttribute="trailing" secondItem="DeQ-ul-Sqo" secondAttribute="trailing" id="sBo-ob-MWx"/>
+                                    <constraint firstItem="Yd1-D8-Qt2" firstAttribute="top" secondItem="Whk-lH-jZo" secondAttribute="bottom" constant="9" id="wYt-FG-aNu"/>
                                     <constraint firstItem="Yd1-D8-Qt2" firstAttribute="leading" secondItem="rxR-FS-SUD" secondAttribute="trailing" constant="29" id="wju-Xa-mpI"/>
-                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="top" secondItem="rxR-FS-SUD" secondAttribute="bottom" constant="22" id="xut-h8-78c"/>
+                                    <constraint firstItem="DeQ-ul-Sqo" firstAttribute="top" secondItem="rxR-FS-SUD" secondAttribute="bottom" constant="5" id="xut-h8-78c"/>
                                 </constraints>
                             </view>
                         </subviews>
@@ -110,7 +105,7 @@
                     </view>
                     <navigationItem key="navigationItem" id="60Q-ep-cEJ"/>
                     <connections>
-                        <outlet property="priceLabel" destination="Whk-lH-jZo" id="VgO-5K-xfe"/>
+                        <outlet property="dateLabel" destination="Whk-lH-jZo" id="xZT-5j-YHS"/>
                         <outlet property="tableView" destination="DeQ-ul-Sqo" id="FlO-GK-yth"/>
                         <outlet property="textField" destination="rxR-FS-SUD" id="eaR-Dm-DUK"/>
                     </connections>
